[package]
name = "certmaster"
version = "0.0.1"
edition = "2024"

[lib]
name = "common"

[dependencies]
env_logger = { version = "0.11.8" }
log = { version = "0.4.28" }
clap = { version = "4.5.48", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
redis = { version = "0.32.6", features = ["streams", "tokio-comp"] }
notify = { version = "8.2.0", features = ["serde"] }
toml = { version = "0.9.7" }
ron = { version = "0.11.0" }
serde = { version = "1.0.228", features = ["derive"] }
rune = { version = "0.14.1", features = ["tokio"] }

[features]
default = []

[[bin]]
name = "runner"
path = "src/bin/runner.rs"

[[bin]]
name = "receiver"
path = "src/bin/receiver.rs"