[package]
name = "certmaster"
version = "0.0.1"
edition = "2024"

[dependencies]
env_logger = { version = "0.11.8" }
log = { version = "0.4.28" }
clap = { version = "4.5.48", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
redis = { version = "0.32.6", features = ["streams", "tokio-comp"] }
notify = { version = "8.2.0", features = ["serde"] }
ron = { version = "0.11.0" }
rcgen = { version = "0.14.5", features = ["x509-parser", "pem", "aws_lc_rs"] }
common = { path = "./common" }
once_cell = "1.21.3"
futures-util = "0.3.31"

[features]
default = []

[[bin]]
name = "receiver"
src = "./bin/receiver.rs"

[workspace]
members = ["common", "redis-derive"]
